--- a/Job Portal System/Areas/Companies/Pages/Edit.cshtml
+++ b/Job Portal System/Areas/Companies/Pages/Edit.cshtml
@@ -99,12 +99,37 @@
                                 <div class="hidden-objects-container d-none"></div>
 
                                 <div class="form-inputs">
-                                    <div class="form-group">
-                                        <label asp-for="Departments[0].City"></label>
-                                        <input asp-for="Departments[0].City" id="city-input" class="form-control" />
-                                        <span asp-validation-for="Departments[0].City" class="validation-label text-danger"></span>
+                                    <div class="form-group city-select-container">
+                                        <div class="d-flex">
+                                            <div style="flex: 1">
+                                                <select asp-for="Departments[0].State"
+                                                        id="state-input"
+                                                        class="form-control state-select">
+                                                    <option value="">Select state</option>
+                                                </select>
+                                            </div>
+                                            <div style="flex: 0 0 25px"></div>
+                                            <div style="flex: 1">
+                                                <select asp-for="Departments[0].City"
+                                                        disabled="disabled"
+                                                        id="city-input"
+                                                        class="form-control city-select">
+                                                    <option value="">Please select</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex">
+                                            <div style="flex: 1">
+                                                <span asp-validation-for="Departments[0].State"
+                                                      class="validation-label text-danger"></span>
+                                            </div>
+                                            <div class="flex: 0 0 25px"></div>
+                                            <div style="flex: 1">
+                                                <span asp-validation-for="Departments[0].City"
+                                                      class="validation-label text-danger"></span>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <input asp-for="Departments[0].CityId" id="city-id" />
                                     <div class="form-group">
                                         <label asp-for="Departments[0].DetailedAddress"></label>
                                         <input asp-for="Departments[0].DetailedAddress" id="detailed-address-input" class="form-control" />
@@ -138,4 +163,5 @@
     <partial name="_EditorScriptPartial" />
     <partial name="_CollapseScriptsPartial" />
     <partial name="_CompaniesScriptsPartial" />
+    <partial name="_CitiesSelectorScriptPartial" />
 }
