--- a/Job Portal System/Areas/Resumes/Pages/Create.cshtml
+++ b/Job Portal System/Areas/Resumes/Pages/Create.cshtml
@@ -64,46 +64,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card my-3">
-                                <div class="card-body px-3">
-                                    <h5 class="card-title">School</h5>
-                                    <div class="form-group city-select-container">
-                                        <div class="form-row">
-                                            <div class="col-md-6">
-                                                <select asp-for="Educations[0].State"
-                                                        class="form-control state-select">
-                                                    <option value="">Select state</option>
-                                                </select>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <select asp-for="Educations[0].City"
-                                                        disabled="disabled"
-                                                        class="form-control city-select">
-                                                    <option value="">Please select</option>
-                                                </select>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <span asp-validation-for="Educations[0].State"
-                                                      class="validation-label text-danger"></span>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <span asp-validation-for="Educations[0].City"
-                                                      class="validation-label text-danger"></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <label class="col-md-4">School name</label>
-                                        <div class="col-md-8">
-                                            <input asp-for="Educations[0].School" id="school-input"
-                                                   class="form-control" />
-                                            <span asp-validation-for="Educations[0].School"
-                                                  class="validation-label text-danger"></span>
-                                        </div>
-                                    </div>
-                                    <input asp-for="Educations[0].SchoolId" id="school-id" />
-                                </div>
+                            <div class="form-group">
+                                <label asp-for="Educations[0].School"></label>
+                                <input asp-for="Educations[0].School" id="school-input"
+                                       class="form-control" />
+                                <span asp-validation-for="Educations[0].School"
+                                      class="validation-label text-danger"></span>
                             </div>
+                            <input asp-for="Educations[0].SchoolId" id="school-id" />
                         </div>
                         <button type="button"
                                 class="btn btn-submit btn-sub-submit">
@@ -156,7 +124,7 @@
                             <input asp-for="WorkExperiences[0].CompanyId" id="company-id" />
                             <div class="form-group">
                                 <label asp-for="WorkExperiences[0].Description"></label>
-                                <textarea asp-for="WorkExperiences[0].Description" id="description"></textarea>
+                                <textarea asp-for="WorkExperiences[0].Description"></textarea>
                                 <span asp-validation-for="WorkExperiences[0].Description" class="validation-label text-danger"></span>
                             </div>
                         </div>
@@ -243,7 +211,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="ResumeInfo.Biography"></label>
-                            <textarea asp-for="ResumeInfo.Biography" class="form-control" id="biography">
+                            <textarea asp-for="ResumeInfo.Biography" class="form-control">
                                 @Model.ResumeInfo.Biography
                             </textarea>
                             <span asp-validation-for="ResumeInfo.Biography" class="validation-label text-danger"></span>
@@ -300,7 +268,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <partial name="_EditorScriptPartial" />
     <partial name="_ResumesScriptsPartial" />
-    <partial name="_CitiesSelectorScriptPartial" />
 }
