--- a/Job Portal System/Areas/Resumes/Pages/Details.cshtml
+++ b/Job Portal System/Areas/Resumes/Pages/Details.cshtml
@@ -18,7 +18,7 @@
             <div class="form-body">
                 <fieldset id="biography-partial">
                     <legend><i class="fa fa-question-circle"></i> Biography</legend>
-                    @Html.Raw(Model.Resume.Biography)
+                    @Model.Resume.Biography
                 </fieldset>
                 <hr />
                 <fieldset id="educations-partial">
@@ -52,13 +52,13 @@
                                         @if (graduated)
                                         {
                                             <div class="details-container">
-                                                Graduated from <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) with <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> degree in <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> (from @education.StartDate.Year to @education.EndDate.Value.Year)
+                                                Graduated from <span class="font-weight-little-bold">@education.School.Name</span> with <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> degree in <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> (from @education.StartDate.Year to @education.EndDate.Value.Year)
                                             </div>
                                         }
                                         else
                                         {
                                             <div class="details-container">
-                                                Is studying <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> in <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) to get <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> (started from @education.StartDate.Year)
+                                                Is studying <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> in <span class="font-weight-little-bold">@education.School.Name</span> to get <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> (started from @education.StartDate.Year)
                                             </div>
                                         }
                                     </div>
@@ -108,7 +108,7 @@
                                                 <div class="mt-3">
                                                     <span class="d-block font-weight-little-bold">Description:</span>
                                                     <div class="mt-2">
-                                                        @Html.Raw(workExperience.Description)
+                                                        @workExperience.Description
                                                     </div>
                                                 </div>
                                             }
