--- a/Job Portal System/Areas/Resumes/Pages/Index.cshtml
+++ b/Job Portal System/Areas/Resumes/Pages/Index.cshtml
@@ -34,7 +34,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="ResumeInfo.Biography"></label>
-                            <textarea asp-for="ResumeInfo.Biography" class="form-control" id="biography">
+                            <textarea asp-for="ResumeInfo.Biography" class="form-control">
                                 @Model.ResumeInfo.Biography
                             </textarea>
                             <span asp-validation-for="ResumeInfo.Biography" class="validation-label text-danger"></span>
@@ -93,13 +93,13 @@
                                         @if (cantEdit)
                                         {
                                             <div class="details-container">
-                                                Graduated from <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) with <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> degree in <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> (from @education.StartDate.Year to @education.EndDate.Value.Year)
+                                                Graduated from <span class="font-weight-little-bold">@education.School.Name</span> with <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> degree in <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> (from @education.StartDate.Year to @education.EndDate.Value.Year)
                                             </div>
                                         }
                                         else
                                         {
                                             <div class="details-container">
-                                                Is studying <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> in <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) to get <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> (started from @education.StartDate.Year)
+                                                Is studying <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> in <span class="font-weight-little-bold">@education.School.Name</span> to get <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> (started from @education.StartDate.Year)
                                             </div>
                                             <div class="d-flex mt-4 pl-2 pr-2">
                                                 <label class="font-weight-bold"
@@ -177,46 +177,14 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card px-3 mt-3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">School</h5>
-                                            <div class="form-group city-select-container">
-                                                <div class="form-row">
-                                                    <div class="col-md-6">
-                                                        <select asp-for="Educations[0].State"
-                                                                class="form-control state-select">
-                                                            <option value="">Select state</option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="col-md-6">
-                                                        <select asp-for="Educations[0].City"
-                                                                disabled="disabled"
-                                                                class="form-control city-select">
-                                                            <option value="">Please select</option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="col-md-6">
-                                                        <span asp-validation-for="Educations[0].State"
-                                                              class="validation-label text-danger"></span>
-                                                    </div>
-                                                    <div class="col-md-6">
-                                                        <span asp-validation-for="Educations[0].City"
-                                                              class="validation-label text-danger"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="form-row">
-                                                <label class="col-md-4">School name</label>
-                                                <div class="col-md-8">
-                                                    <input asp-for="Educations[0].School" id="school-input"
-                                                           class="form-control" />
-                                                    <span asp-validation-for="Educations[0].School"
-                                                          class="validation-label text-danger"></span>
-                                                </div>
-                                            </div>
-                                            <input asp-for="Educations[0].SchoolId" id="school-id" />
-                                        </div>
+                                    <div class="form-group">
+                                        <label asp-for="Educations[0].School"></label>
+                                        <input asp-for="Educations[0].School" id="school-input"
+                                                class="form-control" />
+                                        <span asp-validation-for="Educations[0].School"
+                                                class="validation-label text-danger"></span>
                                     </div>
+                                    <input asp-for="Educations[0].SchoolId" id="school-id" />
                                 </div>
                                 <button type="button"
                                         class="btn btn-submit btn-sub-submit">
@@ -259,7 +227,7 @@
                                                 <div class="mt-3">
                                                     <span class="d-block font-weight-little-bold">Description:</span>
                                                     <div class="mt-2">
-                                                        @Html.Raw(workExperience.Description)
+                                                        @workExperience.Description
                                                     </div>
                                                 </div>
                                             }
@@ -274,7 +242,7 @@
                                                 <div class="mt-3">
                                                     <span class="d-block font-weight-little-bold">Description:</span>
                                                     <div class="mt-2">
-                                                        @Html.Raw(workExperience.Description)
+                                                        @workExperience.Description
                                                     </div>
                                                 </div>
                                             }
@@ -353,7 +321,7 @@
                                     <input asp-for="WorkExperiences[0].CompanyId" id="company-id" />
                                     <div class="form-group">
                                         <label asp-for="WorkExperiences[0].Description"></label>
-                                        <textarea asp-for="WorkExperiences[0].Description" id="description"></textarea>
+                                        <textarea asp-for="WorkExperiences[0].Description"></textarea>
                                         <span asp-validation-for="WorkExperiences[0].Description" class="validation-label text-danger"></span>
                                     </div>
                                 </div>
@@ -534,5 +502,4 @@
     <partial name="_EditorScriptPartial" />
     <partial name="_CollapseScriptsPartial" />
     <partial name="_ResumesScriptsPartial" />
-    <partial name="_CitiesSelectorScriptPartial" />
 }
